// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
      : 
      <span>
        $2.30
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add expense
      </[object Object]>
    </div>
  </div>
</div>
`;

exports[`should render with more expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
      : 
      <span>
        $24,356.65
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add expense
      </[object Object]>
    </div>
  </div>
</div>
`;
